refactor(model-ad): normalize search organisms above the cache boundary